[package]
name = "sysname"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Crate for determining the host system name (like `uname(2)`) in a generic manner"
readme = "README.md"

[features]
std = ["error-repr/std"]
# guess = []

[dependencies]
bitflags = "2.10.0"
bytemuck = { version = "1.24.0", features = [
    "min_const_generics",
    "must_cast",
    "const_zeroed",
] }
cfg-match = "0.2.1"
error-repr = { version = "0.1.0", features = ["alloc"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2.180"
errno-sys = "0.2.0"

[target.'cfg(target_os = "lilium")'.dependencies]
lilium-sys = { git = "https://github.com/LiliumOS/lilium-sys.git" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_System",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemServices",
] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("lilium"))', 'cfg(lilium_ministd)']
